# pysuricata

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  example.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
about-suricatas/: index.html
advanced/: index.html
api/: index.html
architecture/: index.html
architecture-diagrams/: index.html
assets/: titanic_report.html
changelog/: index.html
complexity-analysis/: index.html
configuration/: index.html
contributing/: index.html
docs/: about-suricatas.md  advanced.md  api.md  architecture-diagrams.md  architecture.md  changelog.md  complexity-analysis.md  configuration.md  contributing.md  examples.md  faq.md  index.md  install.md  missing_columns_intelligence.md  numeric_var.md  performance.md  quickstart.md  sequence-diagrams-complexity.md  usage.md  why-pysuricata.md
examples/: car_crashes_polars_report.html  dask_example.ipynb  hello.html  index.html  iris_pandas_report.html  iris_polars_report.html  iris_report.html  micro_benchmarks.py  missing_columns_demo.py  pandas_example.ipynb  polars_example.ipynb  pysuricata_performance_analysis.ipynb  titanic_custom.html  titanic_dask_report.html  titanic_lazy_report.html  titanic_polars_custom.html  titanic_polars_report.html  titanic_report.html  ydata_example.ipynb  ydata_profiling_comparison.ipynb
faq/: index.html
install/: index.html
numeric_var/: index.html
performance/: index.html
pysuricata/: __init__.py  api.py  checkpoint.py  cli.py  config.py  report.py  report_v2.py  utils.py.backup
suricata/: report.py  (+2 more)
(+110 files in other folders)
